# Forsoning

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  tmp.cpp  tmp2.cpp  tmp3.cpp
dependencies/: CMakeLists.txt
dependencies/doctest/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
ext/amutex/: shared_atomic_mutex.h  upgradable_lock.h
ext/sfutex/atomic/: '.hpp
src/: CMakeLists.txt  PathSpace.hpp  PathSpace2.hpp
src/FSNG/: ArrayAegis.hpp  ArraysAegis.hpp  Codex.hpp  Codex2.hpp  Codex2Impl.hpp  CodexInfo.hpp  CodicesAegis.hpp  Converters.hpp  Coro.hpp  Coroutine.hpp  Data.hpp  Execution.hpp  Forge.hpp  InReference.hpp  InReferenceNonTriviallyCopyable.hpp  InReferenceTriviallyCopyable.hpp  Path.hpp  PathSpaceTE.hpp  Scroll.hpp  ScrollImpl.hpp  Security.hpp  Task.hpp  TaskProcessor.hpp  log.hpp  utils.hpp
src/FSNG/Forge/: Eschelon.hpp  Esprit.hpp  Forge.hpp  Hearth.hpp  LoggableMutex.hpp  Task.hpp  TaskProcessor.hpp  Thread.hpp  Ticket.hpp  UpgradableMutex.hpp
src/FSNG/modules/renderer/: CreateWindow.hpp  GLFWVulkanSpace.hpp
src/tools/: spdtocsv.py
submods/: CMakeLists.txt
tests/: CMakeLists.txt  cpp_asio.cpp  cpp_concepts.cpp  cpp_coroutine.cpp  cpp_json.cpp  cpp_mutex.cpp  cpp_random_string.cpp  forge.cpp  forge_upgradable_mutex.cpp  main.cpp  multithreaded_problems.cpp  path.cpp  path_space.cpp  path_space_grab.cpp  path_space_grab_block.cpp  path_space_insert.cpp  path_space_read.cpp  test_utils.hpp
tests/path_space/: cpp_asio.cpp  cpp_random_string.cpp  forge.cpp  path.cpp  path_space.cpp  path_space_grab.cpp  path_space_insert.cpp  path_space_read.cpp  typeinfo.cpp
tests/renderer/: basic_vulkan.cpp
